# FoxPouch

./: LICENSE  index.html  package-lock.json  package.json
.github/workflows/: release.yaml  release.yml
src/: App.tsx  Router.tsx  main.tsx
src-tauri/: Cargo.toml  settings.cfg  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/@types/: apigames.d.ts  gamesdata.d.ts
src/assets/scss/: main.scss
src/assets/scss/abstracts/: _tipography.scss
src/assets/scss/base/: _reset.scss
src/assets/scss/components/: _addgamemodal.scss  _gamecard.scss  _gamelist.scss  _searchinput.scss
src/assets/scss/themes/: _dark.scss
src/components/: AddGameModal.tsx  GameCard.tsx  GameList.tsx  SearchInput.tsx
src/contexts/: ApiGamesContext.tsx  GamesDataContext.tsx
src/pages/: Home.tsx
