[package]
name = "app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "api-all", "system-tray", "dialog"] }
anyhow = "1.0.75"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
